save before trying to fix div wrap

--- a/css/styles.css
+++ b/css/styles.css
@@ -259,5 +259,8 @@ footer {
     display: none;
   }
 
+}
+
+@media (max-width: 768px) {
 
 }
